test_suite/tests/ui/transparent/with_try_from.stderr
error: #[serde(transparent)] is not allowed with #[serde(try_from = "...")]
 --> tests/ui/transparent/with_try_from.rs:4:1
  |
4 | / #[serde(transparent, try_from = "u64")]
5 | | struct S {
6 | |     a: u8,
7 | | }
  | |_^
